<resources>
    <string name="app_name">NASA Pictures app</string>
    <string name="desc_image">Image of a nasa photo</string>
    <string name="text_title">Title</string>
    <string name="text_explanation">Explanation</string>
    <string name="text_date">Date</string>
    <string name="text_copyright">\u00A9</string>
    <string name="image_shared_element_animation">image anim</string>
    <string name="text_onboarding_instruction">Swipe left or right to view more pictures</string>
    <string name="text_ok">OK</string>
    <string name="first_open">firstOpen</string>
    <string name="first_open_shared_pref">firstOpenSharedPref</string>

</resources>