<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/ivItemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_image"
            android:minHeight="300dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/header" />

        <TextView
            android:id="@+id/title"
            style="@style/SubText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItemImage" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="The judge of the jungle" />

        <TextView
            android:id="@+id/date"
            style="@style/SubText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_date"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:text="2011:12:9" />

        <TextView
            android:id="@+id/explanation"
            style="@style/SubText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_explanation"
            app:layout_constraintEnd_toEndOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="@id/tvDate"
            app:layout_constraintTop_toBottomOf="@id/tvDate" />

        <TextView
            android:id="@+id/explanationText"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/copyright_symbol"
            app:layout_constraintEnd_toEndOf="@id/explanation"
            app:layout_constraintStart_toStartOf="@id/explanation"
            app:layout_constraintTop_toBottomOf="@id/explanation"
            tools:text="Phasellus gravida semper nisi. Vivamus elementum semper nisi. Cras non dolor." />

        <TextView
            android:id="@+id/copyright_symbol"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_copyright"
            app:layout_constraintStart_toStartOf="@id/explanationText"
            app:layout_constraintTop_toBottomOf="@id/explanationText"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvCopyright"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/copyright_symbol"
            app:layout_constraintEnd_toEndOf="@+id/explanationText"
            app:layout_constraintStart_toEndOf="@+id/copyright_symbol"
            app:layout_constraintTop_toTopOf="@+id/copyright_symbol"
            tools:text="Leonardo Julio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>